# calendar

./: READme.md  data.json
backend/: .env  Cargo.toml
backend/src/: handlers.rs  main.rs  models.rs  test.rs
backend/src/handlers/: auth.rs  contacts.rs  events.rs  first.rs  models.rs  tasks.rs
backend/src/middlewares/: authorization.rs
backend/src/models/: calendar.rs  category.rs  claim.rs  contact.rs  event.rs  json_responses.rs  mod.rs  task.rs  token.rs  user.rs
backend/src/utils/: hash.rs
frontend/: data.json  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  index.scss  main.tsx  store.ts  store.tsx  themes.tsx  types.d.ts
frontend/src/adapters/: auth.tsx  events.tsx
frontend/src/components/: header.tsx  leftSideBar.tsx  mainCalendar.tsx  miniCalendar.tsx  rightSideBar.tsx  sideCalendar.tsx
frontend/src/contexts/: date.tsx  eventsData.tsx  thisMonth.tsx  userData.tsx
frontend/src/modals/: createEvent.tsx
frontend/src/styles/: _theme.scss  app.scss  contacts.scss  functions.scss  header.scss  home_page.module.scss  home_page.scss  home_page2.scss  left_bar.scss  login.scss  main_calendar.scss  main_calendary.scss  mini_calendar.scss  right_bar.scss  todo.scss
frontend/src/styles/components/: right_bar.scss
frontend/src/styles/modals/: createEvent.scss  eventsDetails.scss
frontend/src/styles/modules/: home_page.module.scss
frontend/src/views/auth/: Register.tsx  login.tsx  register.tsx
frontend/src/views/auth/login/: index.tsx
frontend/src/views/home/: calendar.tsx  contacts.tsx  index.tsx  toDo.tsx
(+1 files in other folders)
