[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-web = "4.3.1"
bson = "2.6.1"
chrono = "0.4.24"
env_logger = "0.10.0"
futures = "0.3.27"
mongodb = "2.4.0"
serde = { version = "*", features = ["derive"] }
tokio = "1.26.0"
