[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
actix = "0.13.0"
actix-web = "4.3.1"
actix-identity = "0.5.2"
actix-ratelimit = "0.3.1"
actix-session = { version = "0.7.2", features = ["cookie-session"] }
bson = "2.6.1"
chrono = "0.4.24"
env_logger = "0.10.0"
log = "0.4.17"
futures = "0.3.27"
mongodb = "2.4.0"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
tokio = "1.26.0"
scrypt = { version = "0.11.0" }
argon2 = "0.5.0"
futures-util = "0.3.28"
jsonwebtoken = "8.3.0"
actix-extensible-rate-limit = "0.2.1"